# cxtempl

./: .gitignore  README.md  dev_requirements.txt  pyproject.toml  setup.cfg  setup.py
src/: main.py
src/cxtemplsample/: __init__.py
tests/: test_sample.py
